# misis2023f-22-01-balabanova-k-a

./: CMakeLists.txt  README.md  codeforces.id  status.md
docs/: report.md
prj.codeforces/: 0050a.cpp  0058a.cpp  0158a.cpp  0158b.cpp  0231a.cpp  0236a.cpp  0239a.cpp  0492a.cpp  0546a.cpp  0791a.cpp  1335a.cpp  1367b.cpp  1512a.cpp  1692a.cpp  1703a.cpp  1820a.cpp  1873c.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  imguifaildialog_test.cpp  main.cpp  sketch.cpp
